// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadGeneExpression action Dispatches appropriately on failure 1`] = `
Object {
  "payload": Object {
    "componentUuid": "asd",
    "experimentId": "1234",
    "genes": Array [
      "a",
      "b",
      "c",
    ],
  },
  "type": "genes/expressionLoading",
}
`;

exports[`loadGeneExpression action Dispatches appropriately on failure 2`] = `
Object {
  "payload": Object {
    "componentUuid": "asd",
    "error": [Error: random error!],
    "experimentId": "1234",
    "genes": Array [
      "a",
      "b",
      "c",
    ],
  },
  "type": "genes/expressionError",
}
`;

exports[`loadGeneExpression action Dispatches appropriately on success 1`] = `
Array [
  Object {
    "componentUuid": "asd",
    "experimentId": "1234",
    "genes": Array [
      "a",
      "b",
      "c",
    ],
  },
  Object {
    "componentUuid": "asd",
    "genes": Array [
      "geneA",
    ],
    "newGenes": Object {
      "orderedGeneNames": Array [
        "geneA",
      ],
      "rawExpression": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
          0,
        ],
        "size": Array [
          1,
          1,
        ],
        "values": Array [],
      },
      "stats": Object {
        "rawMean": Array [
          1,
        ],
        "rawStdev": Array [
          0,
        ],
        "truncatedMax": Array [
          1,
        ],
        "truncatedMin": Array [
          1,
        ],
      },
      "truncatedExpression": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
          0,
        ],
        "size": Array [
          1,
          1,
        ],
        "values": Array [],
      },
      "zScore": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
          0,
        ],
        "size": Array [
          1,
          1,
        ],
        "values": Array [],
      },
    },
  },
]
`;

exports[`loadGeneExpression action Dispatches appropriately on unrun pipeline 1`] = `
Object {
  "payload": Object {
    "componentUuid": "asd",
    "experimentId": "1234",
    "genes": Array [
      "a",
      "b",
      "c",
    ],
  },
  "type": "genes/expressionLoading",
}
`;

exports[`loadGeneExpression action Dispatches appropriately on unrun pipeline 2`] = `
Object {
  "payload": Object {
    "componentUuid": "asd",
    "error": [Error: random error!],
    "experimentId": "1234",
    "genes": Array [
      "a",
      "b",
      "c",
    ],
  },
  "type": "genes/expressionError",
}
`;

exports[`loadGeneExpression action Does not send work for already loaded expression data. 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "1234",
      Object {
        "genes": Array [
          "b",
          "c",
        ],
        "name": "GeneExpression",
      },
      [Function],
      [Function],
      Object {
        "timeout": 60,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;
